deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ewb-deployment
  labels:
    app: my-k8s-application
spec:
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name: kgb-web
          image: adv4000/k8sphp:version1
          ports:
            - containerPort: 80
