project.yml
apiVersion: v1
kind: Pod
metadata:
    name: my-web
spec:
    containers:
        - name: container-apache
          image: httpd:latest
