service-loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-dep
  labels:
    app: my-k8s-dep
spec:
  replicas: 7
  selector:
    matchLabels:
      project: kgb
    template:
      metadata:
        labels:
          project: kgb
      spec:
        containers:
          - name: kgb-web
            image: adv4000/k8sphp:latest
            ports:
              - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: prod
    owner: adminevgvac
spec:
  selector:
    project: kgb
  ports:
    - name: app-lissener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
